// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a series title properly 1`] = `
.c2 {
  display: block;
}

.c4 img {
  max-width: 240px;
  max-height: 40px;
  object-fit: contain;
  object-position: left;
}

.c0 {
  color: black;
  text-align: center;
}

.c0 .c3 {
  padding-top: 5px;
  padding-bottom: 40px;
}

.c0 .c3 img {
  margin-left: auto;
  margin-right: auto;
}

.c1 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 120px;
  line-height: 1.1em;
  margin-bottom: 30px;
}

@media (max-width:900px) {
  .c0 .c3 {
    padding-bottom: 0;
  }
}

@media (max-width:900px) {
  .c1 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 65px;
    line-height: 1em;
    margin-bottom: 20px;
  }
}

<div
  className="c0"
  color="black"
>
  <div
    className="c1"
  >
    The Future of Art
  </div>
  <div
    className="PartnerBlock c2"
  >
    <div
      className="c3 c4"
    >
      <img
        src={null}
      />
    </div>
  </div>
</div>
`;

exports[`renders a series with children properly 1`] = `
.c2 {
  display: block;
}

.c4 img {
  max-width: 240px;
  max-height: 40px;
  object-fit: contain;
  object-position: left;
}

.c0 {
  color: black;
  text-align: center;
}

.c0 .c3 {
  padding-top: 5px;
  padding-bottom: 40px;
}

.c0 .c3 img {
  margin-left: auto;
  margin-right: auto;
}

.c1 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 120px;
  line-height: 1.1em;
  margin-bottom: 30px;
}

@media (max-width:900px) {
  .c0 .c3 {
    padding-bottom: 0;
  }
}

@media (max-width:900px) {
  .c1 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 65px;
    line-height: 1em;
    margin-bottom: 20px;
  }
}

<div
  className="c0"
  color="black"
>
  <div
    className="c1"
  >
    <div>
      Child 
      title
    </div>
  </div>
  <div
    className="PartnerBlock c2"
  >
    <div
      className="c3 c4"
    >
      <img
        src={null}
      />
    </div>
  </div>
</div>
`;

exports[`renders a sponsored series title properly 1`] = `
.c2 {
  display: block;
}

.c5 img {
  max-width: 240px;
  max-height: 40px;
  object-fit: contain;
  object-position: left;
}

.c3 {
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin-bottom: 20px;
}

.c0 {
  color: black;
  text-align: center;
}

.c0 .c4 {
  padding-top: 5px;
  padding-bottom: 40px;
}

.c0 .c4 img {
  margin-left: auto;
  margin-right: auto;
}

.c1 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 120px;
  line-height: 1.1em;
  margin-bottom: 30px;
}

@media (max-width:720px) {
  .c3 {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

@media (max-width:900px) {
  .c0 .c4 {
    padding-bottom: 0;
  }
}

@media (max-width:900px) {
  .c1 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 65px;
    line-height: 1em;
    margin-bottom: 20px;
  }
}

<div
  className="c0"
  color="black"
>
  <div
    className="c1"
  >
    The Future of Art
  </div>
  <div
    className="PartnerBlock c2"
  >
    <div
      className="c3"
    >
      Presented in Partnership with
    </div>
    <div
      className="c4 c5"
    >
      <a
        href="http://artsy.net"
        onClick={[Function]}
        target="_blank"
      >
        <img
          src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FGEu3iYW6CQhbVxsjpOYwZQ%252FGKL_Wort-Bildmarke_negative_rgb%2B2.png&width=240&quality=80"
        />
      </a>
    </div>
  </div>
</div>
`;
